# python-client-generator

./: mypy.ini  pyproject.toml
.github/workflows/: cicd.yml
python_client_generator/: generate_apis.py  generate_models.py  utils.py
python_client_generator/templates/: apis.py.mustache  base_client.py.mustache  pyproject.toml.mustache
tests/: input_app.py  test_generator.py
tests/expected/: apis.py  base_client.py  models.py  openapi.json  pyproject.toml
