[tool.poetry]
name = "python-client-generator"
version = "0.0.0"
description = "Python package to generate an httpx-based client off an OpenAPI spec"
readme = "README.md"
authors = [
  "Bogdan Petre <bogdan.petre@sennder.com>",
  "Trevor Pace <trevor.pace@sennder.com>",
]
repository = "https://github.com/sennder/python-client-generator"

[tool.poetry.urls]
download = "https://github.com/sennder/python-client-generator/releases"
tracker = "https://github.com/sennder/python-client-generator/issues"

[tool.poetry.dependencies]
python = "^3.8"
chevron = "^0.14.0"
fastapi = "^0.110.0"
icecream = "^2.1.3"
mypy = "^1.9.0"
pydantic = "^2.6.3"
semver = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
coverage = { version = "^5.3", extras = ["toml"] }
flake8 = "^3.8.4"
httpx = "^0.23.0"
import-linter = "^1.2.1"
isort = "^5.7.0"
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
python-multipart = "^0.0.6"
semver = "^3.0.0"

[tool.poetry.scripts]
poetry = "poetry.console:main"

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
major_on_zero = false
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["python_client_generator", "tests"]
skip_glob = []
filter_files = true
known_first_party = "python_client_generator"

[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.json
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/expected
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
